<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:fillViewport="true"
                android:paddingBottom="15dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:context=".view.activity.ActAddBook">

            <androidx.appcompat.widget.Toolbar
                    app:title="@string/add"
                    app:titleTextColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    android:theme="?attr/actionBarTheme"
                    android:minHeight="?attr/actionBarSize" tools:layout_editor_absoluteY="4dp"
                    tools:layout_editor_absoluteX="8dp" android:id="@+id/toolbar"/>

            <EditText
                    android:text=""
                    style="@style/editTextStyle1"
                    android:inputType="text"
                    android:hint="@string/title" android:id="@+id/editTitle"
                    tools:layout_editor_absoluteX="5dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

            <EditText
                    android:text=""
                    app:layout_constraintTop_toBottomOf="@+id/editTitle"
                    style="@style/editTextStyle1"
                    android:maxLines="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/desc" android:id="@+id/editDesc"
                    tools:layout_editor_absoluteX="5dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/lyPageContainer"
                          app:layout_constraintTop_toBottomOf="@+id/editDesc"
                          android:layout_marginTop="10dp"
                          android:orientation="horizontal">

                <EditText
                        android:text=""
                        android:id="@+id/editReadPage"
                        android:layout_weight="1"
                        style="@style/editTextStyle1"
                        android:maxLines="1"
                        android:inputType="number"
                        android:hint="@string/read_page"
                />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          style="@style/textStyle1"
                          android:text="/"/>

                <EditText
                        android:text=""
                        android:id="@+id/editTotalPage"
                        android:layout_weight="1"
                        style="@style/editTextStyle1"
                        android:maxLines="1"
                        android:inputType="number"
                        android:hint="@string/total_page"
                />
            </LinearLayout>

            <DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/lyPageContainer"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:id="@+id/datePicker">

            </DatePicker>
            <Button
                    style="@style/buttonStyle1"
                    android:text="@string/complete"
                    android:id="@+id/btnComplete"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/datePicker"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>